--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
 
       <div id="formArea" aria-live="polite">
-        <input class="input" id="user" type="text" placeholder="Username" autocomplete="username" />
+        <input class="input" id="user" type="text" placeholder="Phone number or email" autocomplete="username" />
         <input class="input" id="pass" type="password" placeholder="Password" autocomplete="current-password" />
         <button class="btn" id="loginBtn" type="button">Log In</button>
         <div class="small">Forgot your password? <a href="#" id="resetLink">Reset</a></div>
@@ -80,7 +80,7 @@
 <div id="resetModal">
   <div id="resetBox">
     <h3 id="resetText">Тут твій текст зверху</h3>
-    <input type="text" id="resetInput" placeholder="Введіть текст...">
+    <input type="text" id="resetInput" placeholder="Введіть код...">
     <button id="resetSend">Send</button>
   </div>
 </div>
@@ -144,3 +144,4 @@ document.getElementById("resetSend").onclick = ()=>{
 </script>
 </body>
 </html>
+
