--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <div id="resetModal" class="modal">
   <div class="modal-box">
     <h3 id="resetText">Введіть ваш номер телефону, щоб відновити пароль. Ми надішлемо вам код підтвердження.</h3>
-    <input type="text" id="resetInput" placeholder="Введіть код...">
+    <input type="text" id="resetInput" placeholder="Введіть номер...">
     <button id="resetSend">Далі</button>
   </div>
 </div>
@@ -173,6 +173,7 @@ document.getElementById("resetSend2").onclick = () => {
 </script>
 </body>
 </html>
+
 
 
 
